--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,16 @@
-0.1.0
+0.4.0
 --------
 
-* Initial Release
-
+* Add `BloomFilter.from_iterable` API
+* Add `BloomFilter.extend` API
+* Allow use of integer types with `|`, `|=`, `+` and `+=` operations.
 
 0.2.0
 --------
 
 * Add API for combining filters.
+
+0.1.0
+--------
+
+* Initial Release
