--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
-unreleased
-----------
+0.6.0 (Nov. 28, 2022)
+---------------------
 
 - Drop support for python 3.6
 - Add support for python 3.8, 3.9, 3.10, 3.11
